# BV-algorithm

./: .env.example  .gitignore  .pre-commit-config.yaml  Grover Implementation.ipynb  README.md  pyproject.toml  requirements.txt
Bernstein-Vazirani Implementation/: BV.ipynb  bv.py
String Matching Implementation/: main.ipynb  main.py
src/: BV.ipynb  bv.py  main.ipynb  main.py  plot_metrics.py  plot_survival_curve.py
src/Notebooks/: BV.ipynb
src/Plot_results/: bv_metrics.csv  bv_predictions.csv
src/Plot_results/hist_data/custom_noise/: 00000_readout_high.json  00000_readout_low.json  00000_readout_medium.json  00000_readout_ultra-low.json  00000_readout_very-high.json  00000_thermal_relaxation_very-high.json  00001_amplitude_damping_high.json  00001_amplitude_damping_low.json  00001_amplitude_damping_medium.json  00001_amplitude_damping_very-high.json  00001_cx_gate_medium.json  00001_cx_gate_very-high.json  00001_depolarizing_high.json  00001_depolarizing_medium.json  00001_h_gate_high.json  00001_h_gate_medium.json  00001_h_gate_very-high.json  00001_phase_amplitude_damping_high.json  00001_phase_amplitude_damping_medium.json  00001_phase_amplitude_damping_ultra-low.json  00001_phase_amplitude_damping_very-high.json  00001_phase_amplitude_h_gate_high.json  00001_phase_amplitude_h_gate_low.json  00001_phase_amplitude_h_gate_medium.json  00001_phase_amplitude_h_gate_very-high.json  00001_phase_damping_high.json  00001_phase_damping_medium.json  00001_readout_high.json  00001_readout_low.json  00001_readout_medium.json  (+966 more)
src/data/: results_summary.csv
(+124 files in other folders)
