[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "Quantum-String-Match"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build]

[tool.hatch.build.targets.wheel]
only-include = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5.6",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "C4", "SIM", "PIE", "T20", "RUF"]
ignore = ["D203", "D213", "E203", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
